--- a/public/main.css
+++ b/public/main.css
@@ -1,14 +1,14 @@
-/*.container{
-  display: flex;
-  flex-flow: row wrap;*/
 
-
-
-  h1, h2, h3, h4, p{
-  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+h1, h2, h3, h4, p{
+font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+}
+body {
+  height: 100%;
 }
 
-
+.container-fluid{
+  background-color: #f5f5f5;
+}
 .logo-image {
   width: 40px;
   height: 40px;
@@ -16,25 +16,154 @@
 }
 .logo-text {
   text-align: right;
-  float:right;
 }
 .header {
-  border-style: dashed;
-  border-color: blue;
-  border-width: thin;
+  width: 100%;
+  Height: 400px;
+  color: #ffffff;
+  text-align: center;
+  background-image: url("images/GusHeader.jpg");
+}
+
+.header-text {
+  margin-top: 10%;
+  margin-left: 30%;
+  padding: 5%;
+  border-style: solid;
+  border-color: #ffffff;
+  border-width: medium;
+  background-color: hsl(16, 0%, 81%);
 
 }
-.home {
-  border-style: dashed;
-  border-color: blue;
-  border-width: thin;
+
+.header-text h1 {
+  font-size: 60px;
 }
-.footer {
-  border-style: dashed;
-  border-color: blue;
-  border-width: thin;
+
+
+.home {
+  padding-top: 5%;
+  width: 100%;
 }
 
 .nav{
+  padding-top: 5px;
   text-align: right;
+  color: #ffffff !important;
+}
+
+.nav-link li a {
+     color: #fff !important;
+ }
+ .nav-link li a:hover {
+     color: grey !important;
+ }
+
+.nav-item{
+  padding: 5px;
+}
+nav flex-column {
+text-align: left;
+}
+
+.footer {
+  position: relative;
+  position: sticky;
+  width: 100%;
+  height: 60px;
+  bottom: 0px;
+  line-height: 60px;
+  text-align: center;
+}
+
+/* GLOBAL STYLES
+-------------------------------------------------- */
+/* Padding below the footer and lighter body text */
+
+/*body {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  color: #5a5a5a;
+}*/
+
+
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+/* Carousel base className */
+.carousel {
+  margin-bottom: 4rem;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 10;
+  bottom: 3rem;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+  height: 32rem;
+  background-color: #777;
+}
+.carousel-item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 32rem;
+}
+
+
+/* MARKETING CONTENT
+-------------------------------------------------- */
+
+/* Center align the text within the three columns below the carousel */
+.marketing .col-lg-4 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+.marketing h2 {
+  font-weight: normal;
+}
+.marketing .col-lg-4 p {
+  margin-right: .75rem;
+  margin-left: .75rem;
+}
+
+
+/* Featurettes
+------------------------- */
+
+.featurette-divider {
+  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+}
+
+/* Thin out the marketing headings */
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -.05rem;
+}
+
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 40em) {
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.4;
+  }
+
+  .featurette-heading {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 62em) {
+  .featurette-heading {
+    margin-top: 7rem;
+  }
 }
